- Normalize Resource Endpoint Wrapper - Return to JDK 15 - Replace missing Instant converter - Tests with running instance